--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>DLsite Lowest Price Watcher</title>
+    <title>🇩🇱 DLsite Lowest Price Watcher</title>
     <meta name="keywords" content="dlsite">
 
     <style>
