fix logging, detect clean wd

--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -64,7 +64,7 @@
         </ul>
         <p>This program retrieves data from <code>https://www.dlsite.com/&lt;category&gt;/ranking/total</code>. Namely
             it only tracks best sellers. You're not able to trivially modify this to track custom artifact.</p>
-        <p><strong>Record starts from <time>2022/4/1</time></strong></p>
+        <p><strong>Recording starts from <time>2022/4/1</time></strong></p>
     </article>
 
     <hr>
