--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -3,6 +3,7 @@
 <head>
     <title>🇩🇱 DLsite Lowest Price Watcher</title>
     <meta name="keywords" content="dlsite">
+    <meta name="description" content="Track the lowest price of best sellers on DLsite">
 
     <style>
         header {
@@ -48,7 +49,7 @@
     </style>
 </head>
 
-<html>
+<html lang="en">
 <header>
     <h1>DLsite Lowest Price Watcher</h1>
 </header>
@@ -80,7 +81,7 @@
                     <th>Date</th>
                 </tr>
             </thead>
-            <tbody>{DATA}</tbody>
+            <tbody lang="ja">{DATA}</tbody>
         </table>
     </section>
 </main>
