--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -4,6 +4,7 @@
     <title>🇩🇱 DLsite Lowest Price Watcher</title>
     <meta name="keywords" content="dlsite">
     <meta name="description" content="Track the lowest price of best sellers on DLsite">
+    <meta name="google-site-verification" content="RMbl3zrxUNoAN9Q2XcBsy7qLE5te_LAO9wR6PW0MVsU" />
 
     <style>
         header {
