fix chrome compatibility

--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -83,7 +83,7 @@
                         <th>Name</th>
                         <th>Price</th>
                         <th>Discount</th>
-                        <th>Date</th>
+                        <th style="min-width: 6rem;">Date</th>
                     </tr>
                 </thead>
                 <tbody lang="ja">{DATA}</tbody>
