--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -49,6 +49,22 @@
         td {
             padding: 2px;
         }
+
+        #r18chk:checked {
+            display: none;
+        }
+
+        #r18chk:checked+label {
+            display: none;
+        }
+
+        :not(#r18chk:checked)~#details {
+            display: none;
+        }
+
+        #r18chk:checked~#details {
+            display: block;
+        }
     </style>
 </head>
 
@@ -75,7 +91,9 @@
 
         <hr>
 
-        <section data-nosnippet non-crawlable>
+        <input type="checkbox" id="r18chk"><label for="r18chk">Before seeing the details, I promise I'm 18+</label>
+
+        <section id="details" data-nosnippet non-crawlable>
             <table>
                 <thead>
                     <tr>
