--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -107,8 +107,8 @@
 
     <footer>
         <section>
-            <small><a href="https://github.com/imba-tjd/dlwatcher"
-                    target="_blank">https://github.com/imba-tjd/dlwatcher</a></small>
+            <small><a href="https://github.com/imba-tjd/dlwatcher" target="_blank"
+                    rel="noopener">https://github.com/imba-tjd/dlwatcher</a></small>
         </section>
     </footer>
 
