--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Track the lowest price of best sellers on DLsite">
     <meta name="google-site-verification" content="RMbl3zrxUNoAN9Q2XcBsy7qLE5te_LAO9wR6PW0MVsU" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'" />
 
     <style>
         header {
