--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -9,6 +9,7 @@
     <meta name="google-site-verification" content="RMbl3zrxUNoAN9Q2XcBsy7qLE5te_LAO9wR6PW0MVsU" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'" />
+    <link rel="icon" href="data:" type="image/x-icon">
 
     <style>
         header {
