--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="keywords" content="dlsite">
     <meta name="description" content="Track the lowest price of best sellers on DLsite">
-    <meta name="google-site-verification" content="RMbl3zrxUNoAN9Q2XcBsy7qLE5te_LAO9wR6PW0MVsU" />
+    <meta name="google-site-verification" content="RMbl3zrxUNoAN9Q2XcBsy7qLE5te_LAO9wR6PW0MVsU">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'none'; style-src 'unsafe-inline'; img-src https://wiki.greasespot.net/favicon.ico" />
-    <link rel="icon" href="#" type="image/x-icon">
+        content="default-src 'none'; style-src 'unsafe-inline'; img-src https://wiki.greasespot.net/favicon.ico">
+    <base href="https://www.dlsite.com/maniax/work/=/product_id/" target="_blank">
 
     <style>
         header {
@@ -110,7 +110,7 @@
             <p><strong>Recording starts from <time>2022/4/3</time></strong></p>
 
             <a class="userscript" href="https://github.com/imba-tjd/DLWatcher/raw/master/DLWatcher.user.js"
-                target="_blank" rel="noopener">
+                rel="noopener">
                 <img src="https://wiki.greasespot.net/favicon.ico" alt="icon"> Add userscript
             </a>
         </article>
@@ -138,7 +138,7 @@
 
     <footer>
         <section>
-            <small><a href="https://github.com/imba-tjd/dlwatcher" target="_blank"
+            <small><a href="https://github.com/imba-tjd/dlwatcher"
                     rel="noopener">https://github.com/imba-tjd/dlwatcher</a></small>
         </section>
     </footer>
