--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Track the lowest price of best sellers on DLsite">
     <meta name="google-site-verification" content="RMbl3zrxUNoAN9Q2XcBsy7qLE5te_LAO9wR6PW0MVsU">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="rating" content="adult">
     <link rel="icon" href="data:" type="image/x-icon">
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'none'; style-src 'unsafe-inline'; img-src https://wiki.greasespot.net/favicon.ico">
