--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -123,7 +123,7 @@
 
         <hr>
 
-        <input type="checkbox" id="r18chk"><label for="r18chk">Before seeing the details, I promise I'm
+        <input type="checkbox" id="r18chk"><label for="r18chk">🔞 Before seeing the details, I promise I'm
             <strong style="color: red">18+</strong></label>
 
         <section id="details" data-nosnippet non-crawlable style="display: none">
