--- a/data_tmpl.html
+++ b/data_tmpl.html
@@ -102,8 +102,9 @@
 
     <main>
         <article>
-            <p>For a long time there isn't a DLsite version of <em>SteamDB</em>. It's easy to create one. But it's hard
-                to:
+            <p>For a long time there <del>isn't</del> a DLsite version of <em>SteamDB</em>.
+                <ins>Actually there is: <a href="https://dojindb.net">dojindb</a></ins>
+                It's easy to create one. But it's hard to:
             </p>
             <ul>
                 <li>not abuse crawling</li>
